# netd

./: .gitignore  CMakeLists.txt  FINAL.md  LICENSE  Makefile  README.md
client/: CMakeLists.txt
client/include/: CMakeLists.txt  lldp.hpp  netconf.hpp  parser.hpp  processor.hpp  table.hpp  terminal.hpp  tui.hpp
client/include/netconf/: base.hpp  client.hpp  handlers.hpp  reply.hpp  rpc.hpp
client/include/processor/: actions.hpp  command.hpp  completion.hpp  parser.hpp  token.hpp
client/parser/: CMakeLists.txt  commit.l  commit.y  delete.l  delete.y  get.l  get.y  parser.l  parser.y  set.l  set.y
client/src/: CMakeLists.txt  lldp.cpp  main.cpp  netconf.cpp  parser.cpp  processor.cpp  table.cpp  terminal.cpp
client/src/netconf/: CMakeLists.txt  base.cpp  client.cpp  reply.cpp  request.cpp  response.cpp  rpc.cpp
client/src/processor/: CMakeLists.txt  actions.cpp  command.cpp  completion.cpp  parser.cpp  parser_actions.cpp  token.cpp
client/src/tui/: CMakeLists.txt  command.cpp  curses.cpp  cursor.cpp  interactive.cpp  logger.cpp  message.cpp  prompt.cpp  screen.cpp  status.cpp  table.cpp  text.cpp
extensions/: CMakeLists.txt  example_extension.cpp
freebsd/src/: CMakeLists.txt  route.cpp  vrf.cpp
freebsd/src/interface/: 80211.cpp  CMakeLists.txt  base.cpp  bridge.cpp  epair.cpp  ethernet.cpp  lagg.cpp  ppp.cpp  tap.cpp  tun.cpp  vlan.cpp  vxlan.cpp  wireguard.cpp
server/: CMakeLists.txt
server/include/: CMakeLists.txt  netconf.hpp  signal.hpp  store.hpp
server/include/netconf/: base.hpp  handlers.hpp  rpc.hpp  server.hpp  session.hpp
server/include/store/: base.hpp  candidate.hpp  running.hpp  startup.hpp
server/src/: CMakeLists.txt  lib.cpp  main.cpp  netconf.cpp  signal.cpp  store.cpp
server/src/netconf/: CMakeLists.txt  base.cpp  request.cpp  response.cpp  rpc.cpp  server.cpp  session.cpp  unix.cpp
server/src/store/: CMakeLists.txt  base.cpp
shared/: CMakeLists.txt  netd-shared.pc.in
shared/include/: CMakeLists.txt  address.hpp  backend.hpp  dtls.hpp  ethernet.hpp  exception.hpp  extension.hpp  http.hpp  interface.hpp  logger.hpp  master.hpp  pretty.hpp  quic.hpp  request.hpp  response.hpp  route.hpp  sctp.hpp  socket.hpp  stream.hpp  tls.hpp  transport.hpp  tunnel.hpp  unix.hpp  vrf.hpp  yang.hpp
shared/include/base/: CMakeLists.txt  serialization.hpp
shared/include/expect/: base.hpp  interface.hpp  manager.hpp
shared/include/interface/: 80211.hpp  CMakeLists.txt  bridge.hpp  epair.hpp  ethernet.hpp  lagg.hpp  ppp.hpp  tap.hpp  tun.hpp  vlan.hpp  vxlan.hpp  wireguard.hpp
shared/include/lldp/: chassis.hpp  client.hpp  config.hpp  connection.hpp  custom.hpp  discovery.hpp  error.hpp  info.hpp  interface.hpp  neighbor.hpp  port.hpp  service.hpp
shared/include/marshalling/: data.hpp  error.hpp  filter.hpp  interface.hpp  network.hpp  route.hpp
shared/include/netconf/: dtls.hpp  http.hpp  rpc.hpp  sctp.hpp  session.hpp  tls.hpp  transport.hpp  unix.hpp
shared/include/request/: base.hpp  close.hpp  commit.hpp  config.hpp  copy.hpp  delete.hpp  discard.hpp  edit.hpp  get.hpp  hello.hpp  kill.hpp  lock.hpp  unlock.hpp  validate.hpp
shared/include/response/: base.hpp  close.hpp  commit.hpp  config.hpp  copy.hpp  delete.hpp  discard.hpp  edit.hpp  hello.hpp  kill.hpp  lock.hpp  unlock.hpp  validate.hpp
shared/include/xml/: base.hpp  envelope.hpp  hello.hpp
shared/src/: CMakeLists.txt  address.cpp  backend.cpp  dtls.cpp  ethernet.cpp  exception.cpp  extension.cpp  http.cpp  interface.cpp  logger.cpp  master.cpp  pretty.cpp  quic.cpp  request.cpp  response.cpp  route.cpp  sctp.cpp  socket.cpp  stream.cpp  tls.cpp  transport.cpp  tunnel.cpp  unix.cpp  vrf.cpp  yang.cpp
shared/src/expect/: CMakeLists.txt  base.cpp  interface.cpp  manager.cpp
shared/src/interface/: 80211.cpp  CMakeLists.txt  bridge.cpp  epair.cpp  ethernet.cpp  lagg.cpp  ppp.cpp  tap.cpp  tun.cpp  vlan.cpp  vxlan.cpp  wireguard.cpp
shared/src/lldp/: CMakeLists.txt  chassis.cpp  client.cpp  config.cpp  connection.cpp  custom.cpp  discovery.cpp  error.cpp  info.cpp  interface.cpp  neighbor.cpp  port.cpp  service.cpp
shared/src/marshalling/: CMakeLists.txt  data.cpp  error.cpp  filter.cpp  interface.cpp  network.cpp  route.cpp
shared/src/netconf/: CMakeLists.txt  dtls.cpp  http.cpp  rpc.cpp  sctp.cpp  session.cpp  tls.cpp  transport.cpp  unix.cpp
shared/src/request/: CMakeLists.txt  base.cpp  close.cpp  commit.cpp  config.cpp  copy.cpp  delete.cpp  discard.cpp  edit.cpp  get.cpp  hello.cpp  kill.cpp  lock.cpp  unlock.cpp  validate.cpp
shared/src/response/: CMakeLists.txt  base.cpp  close.cpp  commit.cpp  config.cpp  copy.cpp  delete.cpp  discard.cpp  edit.cpp  hello.cpp  kill.cpp  lock.cpp  unlock.cpp  validate.cpp
shared/src/xml/: CMakeLists.txt  base.cpp  envelope.cpp  hello.cpp
src/client/: CMakeLists.txt  client.c  debug.c  display_utils.c  error.c  functions.c  if_table.c  if_table.h  ifgrp_bridge_table.c  ifgrp_table.c  ifgrp_table.h  ifgrp_wlan_table.c  ifgrp_wlan_table.h  iftype_bridge_table.c  iftype_epair_table.c  iftype_ethernet_table.c  iftype_gif_table.c  iftype_lagg_table.c  iftype_loopback_table.c  iftype_table.c  iftype_tap_table.c  iftype_vlan_table.c  iftype_vxlan_table.c  iftype_wlan_table.c  interface_table.c  lexer.l  main.c  net.h  netconf.c  parser.h  parser.y  route_table.c  table_utils.c  table_utils.h  utils.c  vrf_table.c  xml_utils.c  yang.c
src/client/netconf/: CMakeLists.txt  client.c  commands.c  netconf.h  requests.c  transactions.c  utils.c  utils.h  yang.c
src/client/parser/: CMakeLists.txt  commands.y  delete.y  grammar.h  lexer.l  parser.y  set.y  show.y  tokens.h  utils.c  utils.h
src/client/table/: CMakeLists.txt  bridge.c  default.c  epair.c  ethernet.c  gif.c  interface_groups.c  lagg.c  loopback.c  routes.c  table.h  tap.c  utils.c  (+4 more)
src/server/: CMakeLists.txt  config.c  debug.c  freebsd_system.c  interface.c  main.c  netconf.c  netconf_interface.c  netconf_route.c  netconf_vrf.c  netd.h  route.c  system.c  transaction.c  utils.c  vrf.c  yang.c
src/shared/: CMakeLists.txt  debug.c  debug.h  types.c  types.h
(+349 files in other folders)
